guides: make java-library-quality the canonical home, and give @NullMarked an enforcer
The Java engineering standard has lived in three places since GP-9: the grand-plan v2
original, a research-KB ingest snapshot, and this copy. Sessions have been citing the
snapshot as if it were maintained. Name this file the single home, point the other two
at it as frozen, and route the questions here from the root index.

Then close the gap the standard itself had: JSpecify ships annotations and no checking,
so a @NullMarked package verified by nothing is a false claim readers and tools trust.
§4.7 adds the enforcer — NullAway at ERROR — with the wiring that works on JDK 21, the
four config decisions and their measured grounds, the adoption triage to budget for, and
the Optional-vs-@Nullable criterion stated as *can the caller act on the absence?* rather
than as a positional rule that fails at the edges.

Two link fixes ride along: phase-review-template moved to phases/ and the guide still
pointed beside itself.